finalizacion de pagina

--- a/index.html
+++ b/index.html
@@ -1,32 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <header
+  <header>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./public/css/estilos.css">
     <title>Crema con Cannabis</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </header>
-  <body>
+  <body style="background-color: rgb(44, 196, 79);">
     <div>
       <img src="./public/img/hoja.png" class="header_logo"/>
-      <img src="./public/img/boton_menu.png" class="header_logo_right"/>
+      <button style="float:right;"><img style="float:right; height: 50px; width: 50px;" src="./public/img/boton_menu.png"/></button>
       <h1>Crema con Cannabis</h1>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col">
-          <img src="./public/img/example1.png" class="example_left"/>
+        <div class="col-sm-4">
+          <img src="./public/img/example1.png" class="image_example"/>
         </div>
-        <div class="col">
+        <div class="col-sm-4">
           <p>
+            <br>
               .Antibacteriana <br>
               .Antiinflamatoria <br>
               .Analgesico Natural <br>
               (uso topico)
           </p>
         </div>
-        <div class="col">
-          <img src="./public/img/example1.png" class="example_right"/>
+        <div class="col-sm-4">
+          <img src="./public/img/example1.png" class="image_example"/>
         </div>
+      </div>
+    </div>
+    <br>
+    <br>
+    <div style="background-color: rgb(42, 104, 57);" class="container">
+      <div class="row">
+        <div class="col-sm-4">
+         <p>Nosotros</p>
+        </div>
+        <div class="col-sm-4">
+         <p>Graciela Blasco y asociados</p>
+        </div>
+      </div>
+    </div>
+    <br>
+    <br>
+    <div style="background-color: rgb(7, 94, 29);" class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="./public/img/example1.png" class="image_example_2"/>
+        </div>
+        <div class="col-sm-4">
+         <p>Productos 100% Naturales</p>
+        </div>
+      </div>
+    </div>
+    <br>
+    <br>
+    <div style="background-color: rgb(71, 94, 7);" class="container">
+      <div class="row">
+        <a href="https://www.instagram.com/cremaconcannabis/" class="fa fa-instagram"></a>
+        CREMA CON CANNABIS
+        <img src="./public/img/hotmail_logo.png" style="width:50px; height:30px;"/>
+        graciela-blasco@hotmail.com
       </div>
     </div>
   </body>
